chore: remplacement de isort, flack8 & black par ruff + application

--- a/modele/entrainement/neobanque-credit.ipynb
+++ b/modele/entrainement/neobanque-credit.ipynb
@@ -33,8 +33,8 @@
    "source": [
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
-    "import seaborn as sns\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import seaborn as sns"
    ]
   },
   {
@@ -113,11 +113,11 @@
     "import zipfile\n",
     "\n",
     "# Extraction du ZIP\n",
-    "with zipfile.ZipFile('application_train.zip', 'r') as zip_ref:\n",
-    "    zip_ref.extractall('.')\n",
+    "with zipfile.ZipFile(\"application_train.zip\", \"r\") as zip_ref:\n",
+    "    zip_ref.extractall(\".\")\n",
     "\n",
     "# Charger les données d'entraînement\n",
-    "train_data = pd.read_csv('application_train.csv').dropna()\n",
+    "train_data = pd.read_csv(\"application_train.csv\").dropna()\n",
     "print(train_data.head())"
    ]
   },
@@ -147,8 +147,8 @@
    "outputs": [],
    "source": [
     "# Séparer les variables et la cible pour l'ensemble d'entraînement\n",
-    "X_train = train_data.drop(columns=['TARGET', 'SK_ID_CURR'])  # On enlève la cible et l'identifiant\n",
-    "y_train = train_data['TARGET']  # Cible"
+    "X_train = train_data.drop(columns=[\"TARGET\", \"SK_ID_CURR\"])  # On enlève la cible et l'identifiant\n",
+    "y_train = train_data[\"TARGET\"]  # Cible"
    ]
   },
   {
@@ -170,15 +170,16 @@
     "from sklearn.preprocessing import OneHotEncoder, StandardScaler\n",
     "\n",
     "# Identifier les colonnes catégorielles et numériques\n",
-    "categorical_cols = X_train.select_dtypes(include=['object']).columns\n",
-    "numeric_cols = X_train.select_dtypes(include=['int64', 'float64']).columns\n",
+    "categorical_cols = X_train.select_dtypes(include=[\"object\"]).columns\n",
+    "numeric_cols = X_train.select_dtypes(include=[\"int64\", \"float64\"]).columns\n",
     "\n",
     "# Créer un transformateur pour encoder les colonnes catégorielles et centrer/réduire les numériques\n",
     "preprocessor = ColumnTransformer(\n",
     "    transformers=[\n",
-    "        ('num', StandardScaler(), numeric_cols),\n",
-    "        ('cat', OneHotEncoder(handle_unknown='ignore'), categorical_cols)\n",
-    "    ])\n",
+    "        (\"num\", StandardScaler(), numeric_cols),\n",
+    "        (\"cat\", OneHotEncoder(handle_unknown=\"ignore\"), categorical_cols),\n",
+    "    ]\n",
+    ")\n",
     "\n",
     "# Appliquer le prétraitement\n",
     "X_train_scaled = preprocessor.fit_transform(X_train)"
@@ -272,24 +273,24 @@
     }
    ],
    "source": [
-    "from sklearn.ensemble import RandomForestClassifier, AdaBoostClassifier\n",
-    "from xgboost import XGBClassifier\n",
+    "from sklearn.ensemble import AdaBoostClassifier, RandomForestClassifier\n",
     "from sklearn.model_selection import cross_val_score\n",
     "from sklearn.neighbors import KNeighborsClassifier\n",
     "from sklearn.tree import DecisionTreeClassifier\n",
+    "from xgboost import XGBClassifier\n",
     "\n",
     "# Définir les modèles à évaluer\n",
     "models = {\n",
-    "    'Random Forest': RandomForestClassifier(random_state=42),\n",
-    "    'AdaBoost': AdaBoostClassifier(random_state=42),\n",
-    "    'XGBoost': XGBClassifier(eval_metric='logloss', random_state=42),\n",
-    "    'KNN': KNeighborsClassifier(),\n",
-    "    'C5.0': DecisionTreeClassifier(random_state=42)  # Alternative à C5.0\n",
+    "    \"Random Forest\": RandomForestClassifier(random_state=42),\n",
+    "    \"AdaBoost\": AdaBoostClassifier(random_state=42),\n",
+    "    \"XGBoost\": XGBClassifier(eval_metric=\"logloss\", random_state=42),\n",
+    "    \"KNN\": KNeighborsClassifier(),\n",
+    "    \"C5.0\": DecisionTreeClassifier(random_state=42),  # Alternative à C5.0\n",
     "}\n",
     "\n",
     "# Utiliser la validation croisée pour évaluer chaque modèle\n",
     "for name, model in models.items():\n",
-    "    cv_scores = cross_val_score(model, X_resampled, y_resampled, cv=5, scoring='roc_auc')\n",
+    "    cv_scores = cross_val_score(model, X_resampled, y_resampled, cv=5, scoring=\"roc_auc\")\n",
     "    print(f\"{name} - AUC-ROC moyen: {cv_scores.mean():.4f} (±{cv_scores.std():.4f})\")"
    ]
   },
@@ -1080,7 +1081,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "7fc3bf30",
    "metadata": {},
    "outputs": [
@@ -1097,7 +1098,9 @@
     "from sklearn.model_selection import cross_val_predict\n",
     "\n",
     "# Obtenir les probabilités prédites par validation croisée\n",
-    "y_probs = cross_val_predict(final_model, X_resampled, y_resampled, cv=5, method='predict_proba')[:, 1]\n",
+    "y_probs = cross_val_predict(final_model, X_resampled, y_resampled, cv=5, method=\"predict_proba\")[\n",
+    "    :, 1\n",
+    "]\n",
     "\n",
     "# Calculer la courbe ROC\n",
     "fpr, tpr, thresholds = roc_curve(y_resampled, y_probs)\n",
@@ -1136,7 +1139,7 @@
     }
    ],
    "source": [
-    "from sklearn.metrics import confusion_matrix, ConfusionMatrixDisplay\n",
+    "from sklearn.metrics import ConfusionMatrixDisplay, confusion_matrix\n",
     "\n",
     "# Définir une liste de seuils à tester\n",
     "thresholds = [0.25, 0.28, 0.3, 0.32, optimal_threshold, 0.4, 0.45]\n",
@@ -1154,10 +1157,10 @@
     "\n",
     "    # Afficher la matrice de confusion\n",
     "    disp = ConfusionMatrixDisplay(confusion_matrix=conf_matrix, display_labels=[0, 1])\n",
-    "    disp.plot(ax=axes[i], cmap='viridis', colorbar=False)\n",
-    "    axes[i].set_title(f'Seuil = {threshold}')\n",
-    "    axes[i].set_xlabel('Prédit')\n",
-    "    axes[i].set_ylabel('Réel')\n",
+    "    disp.plot(ax=axes[i], cmap=\"viridis\", colorbar=False)\n",
+    "    axes[i].set_title(f\"Seuil = {threshold}\")\n",
+    "    axes[i].set_xlabel(\"Prédit\")\n",
+    "    axes[i].set_ylabel(\"Réel\")\n",
     "\n",
     "plt.tight_layout()\n",
     "plt.show()"
@@ -1201,24 +1204,28 @@
     "    sensitivity = tp / (tp + fn) * 100\n",
     "\n",
     "    # Ajouter les métriques à la liste\n",
-    "    metrics.append({\n",
-    "        'Seuil': threshold,\n",
-    "        'Précision': precision,\n",
-    "        'Spécificité': specificity,\n",
-    "        'Sensibilité': sensitivity\n",
-    "    })\n",
+    "    metrics.append(\n",
+    "        {\n",
+    "            \"Seuil\": threshold,\n",
+    "            \"Précision\": precision,\n",
+    "            \"Spécificité\": specificity,\n",
+    "            \"Sensibilité\": sensitivity,\n",
+    "        }\n",
+    "    )\n",
     "\n",
     "metrics_df = pd.DataFrame(metrics)\n",
     "\n",
     "# Pivot pour la heatmap\n",
-    "metrics_pivot = metrics_df.set_index('Seuil')\n",
+    "metrics_pivot = metrics_df.set_index(\"Seuil\")\n",
     "\n",
     "# Créer la heatmap\n",
     "plt.figure(figsize=(16, 4))\n",
-    "sns.heatmap(metrics_pivot.T, annot=True, fmt=\".1f\", cmap=\"YlGnBu\", cbar_kws={'label': 'Pourcentage (%)'})\n",
-    "plt.title('Heatmap des Métriques par Seuil', fontweight='bold')\n",
-    "plt.xlabel('Seuil', fontweight='bold')\n",
-    "plt.ylabel('Métrique', fontweight='bold')\n",
+    "sns.heatmap(\n",
+    "    metrics_pivot.T, annot=True, fmt=\".1f\", cmap=\"YlGnBu\", cbar_kws={\"label\": \"Pourcentage (%)\"}\n",
+    ")\n",
+    "plt.title(\"Heatmap des Métriques par Seuil\", fontweight=\"bold\")\n",
+    "plt.xlabel(\"Seuil\", fontweight=\"bold\")\n",
+    "plt.ylabel(\"Métrique\", fontweight=\"bold\")\n",
     "plt.yticks(rotation=0)\n",
     "plt.xticks(rotation=45)\n",
     "plt.tight_layout()\n",
@@ -1274,7 +1281,13 @@
     "\n",
     "# Afficher le rapport de classification\n",
     "print(\"\\nRapport de Classification :\")\n",
-    "print(classification_report(y_resampled, y_pred, target_names=['Pas de difficulté de paiement', 'Difficulté de paiement']))"
+    "print(\n",
+    "    classification_report(\n",
+    "        y_resampled,\n",
+    "        y_pred,\n",
+    "        target_names=[\"Pas de difficulté de paiement\", \"Difficulté de paiement\"],\n",
+    "    )\n",
+    ")"
    ]
   },
   {
@@ -1295,7 +1308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "232e2cc3",
    "metadata": {},
    "outputs": [
@@ -1314,14 +1327,10 @@
     "import joblib\n",
     "\n",
     "# Créer un dictionnaire pour stocker le modèle et le seuil\n",
-    "model_data = {\n",
-    "    'model': final_model,\n",
-    "    'seuil': 0.28,\n",
-    "    'preprocessor': preprocessor  # Sauvegarder aussi le preprocessor pour les futures transformations\n",
-    "}\n",
+    "model_data = {\"model\": final_model, \"seuil\": 0.28, \"preprocessor\": preprocessor}\n",
     "\n",
     "# Sauvegarder le modèle et le seuil dans un fichier\n",
-    "joblib.dump(model_data, '../modele_prediction_credit.joblib')"
+    "joblib.dump(model_data, \"../modele_prediction_credit.joblib\")"
    ]
   }
  ],
